crates/aranya-policy-compiler/tests/data/actions/non_unit_success.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: an action's success type must be `unit`
  |
2 | action bad() result[string, string] {
  |                     ^^^^^^
